--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.17",
     "next": "latest",
+    "next-transpile-modules": "^10.0.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
